@startuml 03_scene_cpu
' Generate: plantuml -tsvg -tpng -o architecture/out architecture/diagrams/03_scene_cpu.puml

left to right direction
skinparam linetype ortho

skinparam shadowing false
skinparam roundcorner 12
skinparam handwritten false
skinparam backgroundColor #F4F6F9
skinparam ArrowColor #64748B
skinparam ArrowThickness 1.2
skinparam nodesep 70
skinparam ranksep 28

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #CBD5E1
  FontColor #1E293B
  BorderThickness 1
}

skinparam package {
  BackgroundColor #ECFDF5
  BorderColor #059669
  FontColor #064E3B
  FontStyle bold
  BorderThickness 1.5
}

skinparam title {
  FontColor #1E293B
  FontSize 16
  FontStyle bold
}

title Model sceny (CPU)

package "scene loading" #E0F2FE;line:0284C7;text:0F172A {

  class SceneRegistry {
    + scene_json_path()
    + scene_display_name()
  }

  class SceneLoader {
    + load_scene_config()
    + build_scene()
    + count_scene_stats()
  }

  class SceneConfig {
    + primitives, models
    + camera_presets
    + benchmark, stress
  }

  class GltfLoader {
    + load_gltf_models()
  }

  SceneRegistry -[hidden]down- SceneLoader
  SceneLoader -[hidden]down- SceneConfig
}

package scene #ECFDF5;line:059669;text:064E3B {

  class Scene {
    + add_model()
    + model_count()
    + get_model()
    + models()
  }

  class Model {
    + mesh : Mesh
    + transform : Transform
  }

  class Transform {
    + matrix
    + translate()
    + scale()
    + rotate_y()
  }

  class Mesh {
    + primitives
  }

  class MeshPrimitive {
    + vertices
    + indices
    + material : Material
  }

  class Material {
    + texture_location
    + base_color
    + metalness
    + roughness
  }

  Model -[hidden]down- Transform
  MeshPrimitive -[hidden]down- Material
}

package util #F1F5F9;line:94A3B8;text:475569 {

  class Vertex {
    + position
    + uv
    + normal
  }

  class AssetLocation {
    + directory
    + file_name
  }

  Vertex -[hidden]down- AssetLocation
}

SceneLoader ..> SceneConfig
SceneLoader ..> Scene
SceneLoader ..> GltfLoader
GltfLoader ..> Model

Scene "1" *-- "0..*" Model
Model *-- Mesh
Model *-- Transform
Mesh "1" *-- "0..*" MeshPrimitive
MeshPrimitive --> Material
MeshPrimitive ..> Vertex
Material ..> AssetLocation

@enduml
